Fix spacing

--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -99,6 +99,10 @@ section.body {
     margin-right:auto;
     margin-top:40px;
     margin-bottom:40px;
+
+    .&bottom {
+      margin-bottom:0px;
+    }
   }
 
 
